hard-gists/5017218/run.log
=== Docker Run Log for 5017218 ===
Started at: Mi 29. Okt 15:19:02 CET 2025

[2025-10-29 15:19:02] START: Running container for 5017218
[2025-10-29 15:19:02] SUCCESS: Container b407b6e11d628234f94baaab487d89fd88102d981b99cbf93f60c34cfade016b started for 5017218
=== Container logs for 5017218 ===
  File "/snippet.py", line 28
    print "Tm = '%s'" % hexlify(Tm)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5017218 ===
[2025-10-29 15:19:05] INFO: Container b407b6e11d628234f94baaab487d89fd88102d981b99cbf93f60c34cfade016b has stopped
